# A.U.D.I.B.L.E

./: .gitignore  README.md  cmake.sh  source.cfg
audibleJS/: index.js  package-lock.json  package.json  source.cfg
sources/: CMakeLists.txt  main.cpp
sources/images/: logo.jpg.kra  logo.jpg~  logo.png.kra
tests/: cmaketest.sh
tests/BoostAsioClient/: CMakeLists.txt  main.cpp
tests/BoostAsioServer/: CMakeLists.txt  main.cpp
tests/audioClient/: CMakeLists.txt  main.cpp
tests/audioServer/: CMakeLists.txt  main.cpp
tests/cltMsg/: CMakeLists.txt  main.cpp  oldmain.cpp
tests/playpauseGet/: CMakeLists.txt  oldmain.cpp  xkey
tests/srvMsg/: CMakeLists.txt  main.cpp
